fix z-index navbar

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -36,6 +36,7 @@ body {
   left: 0;
   width: 100%;
   height: 90px;
+  z-index: 50;
 }
 
 .search-button,
